<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 공통 리소스 -->
    <string name="app_name">Silmedy</string>
    <string name="logo_description">Silmedy 로고</string>
    <string name="slogan_line1">&quot;조용한 진료, 깊은 이해&quot;</string>
    <string name="slogan_line2">&quot;말이 아닌 마음으로 진료합니다&quot;</string>

    <!-- 공통 입력 힌트 -->
    <string name="hint_email">이메일을 입력해주세요.</string>
    <string name="hint_password">비밀번호를 입력해주세요.</string>
    <string name="hint_password_confirm">비밀번호를 다시 입력해주세요.</string>
    <string name="hint_name">이름을 입력해주세요.</string>
    <string name="hint_phone">숫자만 입력해주세요.</string>
    <string name="hint_zip">우편번호</string>
    <string name="hint_address_detail">상세주소를 입력해주세요.</string>
    <string name="hint_verification_code">인증 코드를 입력해주세요.</string>
    <string name="btn_verify">인증</string>
    <string name="hint_new_password">소문자, 숫자 조합으로 6자리 이상 입력해주세요.</string>
    <string name="hint_new_password_confirm">소문자, 숫자 조합으로 6자리 이상 입력해주세요.</string>

    <!-- 공통 버튼 -->
    <string name="btn_back">뒤로가기</string>
    <string name="btn_save">저장</string>
    <string name="btn_confirm">확인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_send_code">코드 전송</string>
    <string name="btn_resend_code">재전송</string>

    <!-- 공통 메시지 -->
    <string name="toast_all_fields_required">모든 정보를 입력해주세요</string>
    <string name="toast_password_mismatch">비밀번호가 일치하지 않습니다</string>
    <string name="toast_address_search_pending">우편번호 검색 기능은 준비 중입니다</string>
    <string name="title_activity_check_identity">본인 확인</string>

    <!-- 로그인 화면 -->
    <string name="title_activity_login">로그인</string>
    <string name="btn_login">로그인</string>
    <string name="btn_find_id">아이디 찾기</string>
    <string name="btn_find_password">비밀번호 찾기</string>
    <string name="toast_login_empty">이메일과 비밀번호를 입력해주세요</string>
    <string name="toast_login_failed">로그인 정보가 올바르지 않습니다</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="action_sign_in">로그인 또는 회원가입</string>

    <!-- 회원가입 화면 -->
    <string name="title_activity_signup">회원가입</string>
    <string name="btn_signup">회원가입</string>
    <string name="btn_check_email">중복확인</string>
    <string name="btn_zip_search">우편번호 검색</string>
    <string name="btn_verify_phone">본인확인</string>
    <string name="label_email">이메일</string>
    <string name="label_password">비밀번호</string>
    <string name="label_confirm_password">비밀번호 확인</string>
    <string name="label_name">이름</string>
    <string name="label_phone">연락처</string>
    <string name="label_postal_code">우편번호</string>
    <string name="title_activity_postal_code">우편번호 검색</string>
    <string name="label_address">주소</string>
    <string name="label_detail_address">상세주소</string>
    <string name="label_sign_lang">수어 통화 여부</string>
    <string name="toast_signup_success">회원가입이 완료되었습니다</string>
    <string name="toast_signup_fail">회원가입에 실패했습니다</string>

    <!-- 비밀번호 찾기 화면 -->
    <string name="title_activity_find_password">비밀번호 찾기</string>
    <string name="btn_verify_code">인증</string>
    <string name="btn_change_password">비밀번호 변경</string>
    <string name="label_verification_code">인증 코드 입력</string>
    <string name="label_new_password">새 비밀번호</string>
    <string name="label_new_password_confirm">새 비밀번호 확인</string>
    <string name="toast_verification_code_sent">인증 코드가 전송되었습니다</string>
    <string name="toast_verification_success">인증에 성공했습니다</string>
    <string name="toast_verification_fail">인증에 실패했습니다</string>
    <string name="toast_password_change_success">비밀번호가 변경되었습니다</string>
    <string name="toast_password_change_fail">비밀번호 변경에 실패했습니다</string>

    <!-- 아이디 찾기 화면 -->
    <string name="title_activity_find_id">아이디 찾기</string>
    <string name="label_my_id">내 아이디</string>
    <string name="btn_go_login">로그인하러 가기</string>
    <string name="toast_phone_required">연락처를 입력해주세요</string>
    <string name="toast_code_required">인증 코드를 입력해주세요</string>
    <string name="toast_no_account_found">해당 연락처로 가입된 계정이 없습니다</string>
    <string name="toast_id_found">등록된 아이디는 다음과 같습니다</string>

    <!-- 홈 화면 인사 -->
    <string name="greeting_user">%1$s님, 환영합니다.</string>

    <!-- 홈 기능 카드 -->
    <string name="home_touch_symptom_title">터치로 증상확인</string>
    <string name="home_touch_symptom_desc">직접 신체 부위 선택\n촬영하여 증상 확인</string>
    <string name="home_touch_symptom_note">(외상만 확인 가능)</string>

    <string name="home_cold_title">일상질환</string>
    <string name="home_cold_desc">복잡한 과정 없이\n빠르게 진료 신청</string>

    <string name="home_ai_title">닥터링(Dr.Link)</string>
    <string name="home_ai_desc">AI와 채팅하며 증상예측</string>
    <string name="home_ai_note">(내상만 예측 가능)</string>

    <string name="kakao_key_manifest_placeholder">6431bb7769b5d3fcef0c0bb560cc97b1</string>

    <!-- 오류 및 상태 메시지 -->
    <string name="toast_invalid_email">유효하지 않은 이메일 형식입니다</string>
    <string name="toast_invalid_phone">연락처 형식이 잘못되었습니다</string>
    <string name="toast_network_error">네트워크 연결을 확인해주세요</string>
    <string name="toast_unknown_error">알 수 없는 오류가 발생했습니다</string>

    <!-- 로딩 메시지 -->
    <string name="loading_checking_email">이메일 중복 확인 중...</string>
    <string name="loading_verifying_phone">인증번호 전송 중...</string>
    <string name="loading_changing_password">비밀번호 변경 중...</string>

    <!-- 접근성 contentDescription -->
    <string name="content_logo">Silmedy 로고 이미지</string>
    <string name="content_back_button">이전 화면으로 돌아가기</string>
    <string name="content_main_menu">메인 기능 메뉴</string>

    <!-- 포맷 메시지 -->
    <string name="msg_code_sent_to">인증 코드를 %1$s로 전송했습니다</string>
    <string name="msg_email_found">이메일 %1$s 로 가입된 계정이 있습니다</string>
    <string name="msg_greeting">반가워요, %1$s님</string>

    <!-- 기능 버튼 추가 -->
    <string name="btn_retry">다시 시도</string>
    <string name="btn_next">다음</string>
    <string name="btn_previous">이전</string>

    <!-- 버튼 관련 문자열 리소스 -->
    <string name="btn_today">오늘</string>
    <string name="btn_tomorrow">내일</string>

    <!-- 채팅 관련 추가 -->
    <string name="btn_menu">메뉴 열기</string>
    <string name="btn_share">대화방 공유</string>
    <string name="btn_addatt">첨부파일 추가</string>
    <string name="btn_send">메시지 전송</string>
    <string name="hint_chat_input">메시지를 입력하세요</string>
    <string name="chat_toolbar_title">닥터링(Dr.Link)</string>
    <string name="chat_toolbar_status">Online</string>
    <!-- 메시지 항목 레이블 -->
    <string name="label_patient_symptoms">환자 증상</string>
    <string name="label_disease_symptoms">질병 증상</string>
    <string name="label_main_symptoms">주요 증상</string>
    <string name="label_home_actions">자가 관리</string>
    <string name="label_guideline">권고사항</string>
    <string name="label_emergency_advice">응급 조치</string>
    <string name="label_symptom_part">질병 부위</string>
    <string name="label_analysis">증상 분석</string>


    <string name="text_disclaimer1">※ 정확한 진단은 전문가 상담을 통해 진행하세요.</string>
    <string name="text_disclaimer2">※ 비대면 진료가 필요하면 ‘예’라고 답해주세요.</string>


    <string name="sample_my_msg">요즘 가끔 어지럽고 머리가 땡해</string>
    <string name="sample_ai_msg">정확한 진단은 의료진을 통해 받아보시길 바랍니다. 비대면 진료 예약을 원하시나요?</string>
    <string name="silmedy_profile_image">실메디 프로필 이미지</string>
    <string name="sample_date">2025-04-25</string>
    <string name="sample_time">오전 9:30</string>
    <string name="desc_profile_image">프로필 이미지</string>
    <string name="sample_ai_sender">Silmedy</string>




    <!-- Chat Summary 화면 추가 -->
    <string name="title_activity_chat_summary">대화 요약 보기</string>
    <string name="label_chat_summary">대화 요약</string>
    <string name="hint_no_summary">요약된 대화가 없습니다.</string>

    <string name="title_activity_change_password">비밀번호 변경</string>
</resources>
